[package]
name = "owlyshield_ransom"
version = "1.0.1"
edition = "2021"
license-file = "LICENSE.txt"

[dependencies]
moonfire-tflite = { path = "moonfire-tflite" }
slc-paths = { path = "slc-paths" }
win-pe-inspection = { path = "win-pe-inspection" }
wchar = "0.11.0"
registry = "1.2.0"
strum = "0.24.1"
strum_macros = "0.24.2"
byteorder = "1.4.3"
chrono = "0.4.19"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
log = "0.4.17"
rmp-serde = "1.1.0"
hostname = "0.3.1"
curl = "0.4.43"
jsonrpc-http-server = "18.0.0"
configparser = "3.0.2"
rumqtt = "0.31.0"
lru = "0.9.0"
sysinfo = "0.27.7"

#Windows
[target.'cfg(target_os = "windows")'.dependencies]
winlog = { version = "0.2.6", features=["env_logger"] }
windows-service = "0.5.0"
widestring = "1.0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
]

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
redbpf = { version = "2.3.0", features = ["load"] }
redbpf-probes = "2.3.0"
tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
tracing-subscriber = "0.2"
tracing = "0.1"
futures = "0.3"
psutil = "3.2.2"
probes = { path = "./probes" }

[features]
default = []
service = []
malware = []
record = []
replay = []
jsonrpc = []
mqtt = []
