[package]
name = "owlyshield_ransom"
version = "1.1.1"
edition = "2021"
license-file = "LICENSE.txt"

[dependencies]
moonfire-tflite = { path = "moonfire-tflite" }
slc-paths = { path = "slc-paths" }
win-pe-inspection = { path = "win-pe-inspection" }
wchar = "0.11"
registry = "1.2"
strum = "0.24"
strum_macros = "0.24"
byteorder = "1.4"
chrono = "0.4"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rmp-serde = "1.1"
hostname = "0.3"
curl = "0.4"
jsonrpc-http-server = "18.0"
configparser = "3.0"
rumqtt = "0.31"
lru = "0.10"
sysinfo = "0.28"

#Windows
[target.'cfg(target_os = "windows")'.dependencies]
winlog = { version = "0.2.6", features=["env_logger"] }
windows-service = "0.6"
widestring = "1.0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
]

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
#redbpf = { path = "/home/fedora/github/redbpf/redbpf", features = ["load"] }
redbpf = { git = "https://github.com/SitinCloud/redbpf", branch="llvm15", features = ["load"] }
#redbpf-probes = { path = "/home/fedora/github/redbpf/redbpf-probes" }
redbpf-probes = { git = "https://github.com/SitinCloud/redbpf", package="redbpf-probes", branch="llvm15" }
tokio = { version = "1.27", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
tracing-subscriber = "0.3"
tracing = "0.1"
futures = "0.3"
psutil = "3.2"
probes = { path = "./probes" }

[features]
default = []
service = []
malware = []
record = []
replay = []
jsonrpc = []
mqtt = []
