[package]
name = "moonfire-tflite"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[features]
edgetpu = []

[dependencies]
libc = "0.2"
log = { version = "0.4", features = ["release_max_level_info"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["edgetpu"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3