[package]
name = "win-pe-inspection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3